--- a/index.html
+++ b/index.html
@@ -30,4 +30,4 @@
                         <p class="card-text">Este projeto é uma página web que apresenta uma lista dos meus livros
                             favoritos, incluindo informações sobre os autores, datas de publicação e links para compra
                             na Amazon. A página é estilizada com CSS para uma visualização agradável e usa fontes
-                            externas do Google Fonts.
+                            externas 
