--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p>Organizada</p>
             <p>Boa escuta</p>
             <p>Persuaziva</p>
-    </header>
+  </header>
     <main class="container mt-5">
         <h2>Meus projetos</h2>
         <div class="row">
@@ -26,8 +26,201 @@
                 <div class="card">
                     <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
-                        <p class="card-text">Este projeto é uma página web que apresenta uma lista dos meus livros
-                            favoritos, incluindo informações sobre os autores, datas de publicação e links para compra
-                            na Amazon. A página é estilizada com CSS para uma visualização agradável e usa fontes
-                            externas 
+                        <h5 class="card-title">Feira das Profissões: Area do Direito</h5>
+                        <p class="card-text">Este projeto é da escola ivete sala de queiroz feito por alunos das primeiras series da VII das feiras das profissões realizada mo dia 29 de setembro de 2023
+                     </p>
+                        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja
+                            o projeto</button>
+                        <button type="button" class="btn btn-link">Veja o projeto</button>
+                    </div>
+                </div>
+            </div>
+            <!-- Projeto 2 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="img/projeto-2.png" class="card-img-top" alt="Suits a serie">
+                    <div class="card-body">
+                        <h5 class="card-title">A Série de inspiração</h5>
+                        <p class="card-text">Suits é uma série que segue a trajetória de Mike Ross, um jovem com uma memória fotográfica impressionante, que, sem um diploma de Direito, consegue passar no processo seletivo de uma grande firma de advocacia de Nova York. Lá, ele começa a trabalhar com Harvey Specter, um dos melhores advogados da cidade, que, apesar de saber da falta de qualificação de Mike, o mantém em segredo. Juntos, eles resolvem casos complexos enquanto lidam com desafios éticos, conflitos de interesses e o jogo político dentro do escritório.</p>
+                        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">Veja
+                            o projeto</button>
+                        <button type="button" class="btn btn-link">Veja o projeto</button>
+                    </div>Pensamento Estratégico: Harvey, em particular, é mestre em pensar em soluções criativas e estratégicas para seus casos. No Direito, não basta conhecer a lei — é preciso saber como aplicá-la de maneira estratégica.
+                </div>Habilidade de Negociação: As negociações e mediações, tanto no tribunal quanto fora dele, são cruciais em muitos casos. "Suits" destaca como a habilidade de negociar pode ser tão importante quanto o conhecimento jurídico.
+            </div>Trabalho em Equipe: A dinâmica de equipe, com aliados e adversários dentro do escritório, é outro ponto forte. A série mostra que, no Direito, é fundamental saber trabalhar em conjunto com outros profissionais, como advogados, clientes e até mesmo o pessoal de apoio.
+
+
+
+            <!-- Projeto 3 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="img/projeto-3.png" class="card-img-top" alt="Universidades no geral no Direito">
+                    <div class="card-body">
+                        <h5 class="card-title">Explorando as Universidades: Direito
+                        </h5>
+                        <p class="card-text">As universidades de Direito são instituições fundamentais na formação de advogados, juízes, promotores, defensores públicos e outros profissionais do mundo jurídico. Elas oferecem o curso de Bacharelado em Direito, que, no Brasil, tem duração média de 5 anos e é pré-requisito para prestar o Exame da OAB (Ordem dos Advogados do Brasil), necessário para exercer a advocacia.
+                        </p>
+                        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
+                            o projeto</button>
+                        <button type="button" class="btn btn-link">Veja o projeto</button>
+                    </div>O que se estuda em uma faculdade de Direito:
+Ao longo do curso, o estudante tem contato com diversas áreas do conhecimento jurídico, como:
+
+Direito Constitucional
+
+Direito Civil
+
+Direito Penal
+
+Direito Trabalhista
+
+Direito Tributário
+
+Direito Administrativo
+
+Direito Empresarial
+
+Direitos Humanos
+
+Filosofia e Sociologia Jurídica
+
+Prática Jurídica e Estágio Supervisionado
+
+A formação combina teoria, interpretação da legislação, análise de casos práticos e desenvolvimento do raciocínio crítico e argumentativo.
+                </div>Tipos de universidades
+Públicas (gratuitas): como as federais (UFs), estaduais (USP, UERJ, UFMG etc.). Geralmente têm alto prestígio e grande concorrência no vestibular.
+
+Privadas: oferecem mais vagas e opções de turnos, com mensalidades variadas. Algumas têm ótima reputação (como PUC-SP, PUC-Rio, Mackenzie, FGV Direito etc.).
+            </div>Algumas das faculdades de Direito mais reconhecidas no Brasil:
+USP – Universidade de São Paulo (Largo São Francisco)
+
+FGV Direito SP e RJ – Fundação Getulio Vargas
+
+PUC-SP – Pontifícia Universidade Católica de São Paulo
+
+UFMG – Universidade Federal de Minas Gerais
+
+UFRJ – Universidade Federal do Rio de Janeiro
+
+UFPR – Universidade Federal do Paraná
+
+    </main>
+
+    <!-- Modal 1 -->
+    <div class="modal" id="modal1" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Feira da profissões de Direito</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>O Direito não é apenas uma profissão: é uma missão de transformar conflitos em soluções, proteger direitos e garantir a justiça. Meu projeto busca explorar o universo jurídico como uma carreira possível e impactante, unindo conhecimento técnico, responsabilidade social e paixão pela justiça..</p>
+                    <p>As feiras de profissões são espaços de descoberta, onde estudantes têm contato direto com universidades, profissionais da área, alunos de Direito e representantes da Ordem dos Advogados do Brasil (OAB). Elas funcionam como pontes entre o ensino médio e o ensino superior, permitindo que os jovens tirem dúvidas, recebam orientações e enxerguem na prática o que significa cursar Direito.</p>
+                    <p>feiras de profissões são eventos fundamentais para quem ainda está decidindo qual carreira seguir. Nelas, os estudantes têm a oportunidade de conhecer melhor as áreas do conhecimento, conversar com profissionais da área, tirar dúvidas sobre cursos e vivenciar experiências práticas.
+No caso do Direito, as feiras geralmente incluem palestras com juízes, promotores e advogados, oficinas de oratória e argumentação, simulações de júris e atividades interativas. Além disso, universidades montam estandes explicando a grade curricular, as formas de ingresso e os projetos disponíveis. Participar de uma feira como essa ajuda o estudante a entender se a carreira jurídica combina com seu perfil e seus interesses.></p>
+                    <img src="img/projeto-1.png" class="img-fluid w-100"
+                        alt="Imagem representativa do projeto de uma biblioteca online">
+                </div>
+                <div class="modal-footer">
+                    <a href="https://femascheti.github.io/minhas-leituras/">Ver projeto ao vivo</a>
+                    <a href="https://github.com/femascheti/minhas-leituras">Ver código do projeto</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal 2 -->
+    <div class="modal" id="modal2" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>O projeto consiste em uma aplicação web interativa, desenvolvida com HTML, CSS, e JavaScript, que
+                        simula uma experiência narrativa centrada no tema da Inteligência Artificial. O objetivo é
+                        engajar os jogadores em um cenário fictício que aborda o avanço da IA e suas possíveis
+                        consequências para a humanidade, destacando a importância da reflexão ética sobre a tecnologia.
+                    </p>
+                    <p>O HTML estrutura o conteúdo da página, dividindo-o em seções como a tela inicial, caixa de
+                        perguntas, alternativas de resposta, e o resultado final baseado nas escolhas do jogador. O CSS
+                        é utilizado para estilizar a página, empregando um esquema de cores futurista e layout
+                        responsivo para melhorar a experiência do usuário. JavaScript é usado para adicionar
+                        interatividade ao jogo, manipulando o DOM para atualizar o conteúdo da página conforme as
+                        escolhas do jogador, e determinando o fluxo da narrativa através de uma série de perguntas e
+                        respostas.</p>
+                    <p>O HTML organiza o conteúdo em um cabeçalho com o título do site, seguido por uma divisão
+                        principal (.container) que apresenta o propósito do site e a coleção de livros em uma seção
+                        flexível (.livros). Cada livro é destacado em seu próprio contêiner (.livro), mostrando uma
+                        imagem da capa, detalhes do livro e um link de compra. O design responsivo é garantido pelo
+                        uso de uma meta tag viewport e um layout flexível que se adapta a diferentes tamanhos de
+                        tela.</p>
+                    <p>Os scripts JavaScript incluem módulos para gerar nomes aleatórios, definir as perguntas e as
+                        lógicas de jogo, como iniciar o jogo, apresentar perguntas e alternativas, processar as escolhas
+                        dos jogadores, e exibir o resultado final. Este design modular facilita a manutenção e a
+                        expansão futura do jogo. A importância das ferramentas utilizadas (HTML, CSS, JavaScript) reside
+                        na criação de uma experiência interativa que não apenas entretém, mas também educa os jogadores
+                        sobre a complexidade ética e social da IA, incentivando a reflexão crítica sobre o papel da
+                        tecnologia em nossas vidas.
+                    </p>
+                    <img src="img/projeto-2.png" class="img-fluid w-100"
+                        alt="Imagem representativa do projeto de uma biblioteca online">
+                </div>
+                <div class="modal-footer">
+                    <a href="https://femascheti.github.io/tecnicas-computacionais-refletindo-sobre-ia/">Ver projeto ao
+                        vivo</a>
+                    <a href="https://github.com/femascheti/tecnicas-computacionais-refletindo-sobre-ia">Ver código do
+                        projeto</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal 3 -->
+    <div class="modal" id="modal3" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>O projeto é uma aplicação educativa interativa focada em ensinar conceitos básicos de
+                        astronomia. Utiliza uma série de scripts associados a diferentes atores (sprites) e
+                        cenários para criar uma experiência de aprendizado envolvente. O objetivo é familiarizar
+                        os usuários com tópicos como as fases da Lua, eclipses, a visibilidade de diferentes
+                        constelações dependendo da localização geográfica na Terra, e a forma da Terra, através
+                        de interações e visualizações dinâmicas.</p>
+                    <p>Cada ator no projeto possui scripts que definem seu comportamento em resposta a eventos
+                        específicos, como o início do programa (quando a bandeira é clicada), cliques do
+                        usuário, ou mensagens recebidas. Estes eventos desencadeiam ações como mudanças de
+                        cenário, movimentos de atores, exibição ou ocultação de atores, e a apresentação de
+                        diálogos informativos. Por exemplo, ao clicar em determinados atores, os usuários podem
+                        "receber" uma prova, o que leva a uma mudança de cenário e a exibição de informações
+                        relevantes ou a visualização de uma constelação específica.</p>
+                    <p>A importância das ferramentas utilizadas, como os blocos de código visual do Scratch,
+                        reside na sua acessibilidade e na capacidade de engajar aprendizes de diferentes idades
+                        no pensamento computacional e na exploração de conceitos científicos de forma
+                        interativa. O uso de cenários, movimentos, e diálogos dinâmicos ajuda a criar uma
+                        experiência de aprendizado mais rica e memorável, encorajando os usuários a explorar e
+                        interagir com o conteúdo de maneira ativa, em vez de passivamente.</p>
+                    <img src="img/projeto-3.png" alt="Projeto 3" class="img-fluid w-100">
+                </div>
+                <div class="modal-footer">
+                    <a href="https://scratch.mit.edu/projects/951732825/">Ver projeto ao vivo</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="container py-5">
+        <h2>Entre em contato</h2>ferreiradudinha80@gmail.com
+        <div>
+            <i class="bi bi-github"></i>
+            <a href="https://github.com/Duda20000">GitHub</a>
+        </div>
+        <p class="my-5 text-center">© Copyright 2025. Produzido por Maria Eduarda Felpe Ferreira</p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>More actions
+</body
