--- a/index.html
+++ b/index.html
@@ -134,81 +134,28 @@ No caso do Direito, as feiras geralmente incluem palestras com juízes, promotor
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                    <h5 class="modal-title">Suits e outras séries no Direito </h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>O projeto consiste em uma aplicação web interativa, desenvolvida com HTML, CSS, e JavaScript, que
-                        simula uma experiência narrativa centrada no tema da Inteligência Artificial. O objetivo é
-                        engajar os jogadores em um cenário fictício que aborda o avanço da IA e suas possíveis
-                        consequências para a humanidade, destacando a importância da reflexão ética sobre a tecnologia.
+                    <p>Suits é uma série norte-americana que estreou em 2011 e se passa em Nova York, dentro de um dos maiores escritórios de advocacia fictícios do país, a Pearson Hardman (e seus muitos nomes ao longo das temporadas). A trama principal gira em torno de Harvey Specter, um dos melhores e mais confiantes advogados corporativos da cidade, e Mike Ross, um jovem brilhante com memória fotográfica que nunca frequentou a faculdade de Direito, mas consegue impressionar Harvey em uma entrevista e acaba sendo contratado como associado.
+Mesmo sem diploma, Mike demonstra uma inteligência jurídica excepcional, o que o torna indispensável no time. A série se desenvolve a partir dessa mentira que sustenta a carreira de Mike, ao mesmo tempo em que ele e Harvey resolvem casos jurídicos complexos, enfrentam adversários poderosos e precisam manter o segredo de que Mike não é, oficialmente, um advogado.
                     </p>
-                    <p>O HTML estrutura o conteúdo da página, dividindo-o em seções como a tela inicial, caixa de
-                        perguntas, alternativas de resposta, e o resultado final baseado nas escolhas do jogador. O CSS
-                        é utilizado para estilizar a página, empregando um esquema de cores futurista e layout
-                        responsivo para melhorar a experiência do usuário. JavaScript é usado para adicionar
-                        interatividade ao jogo, manipulando o DOM para atualizar o conteúdo da página conforme as
-                        escolhas do jogador, e determinando o fluxo da narrativa através de uma série de perguntas e
-                        respostas.</p>
-                    <p>O HTML organiza o conteúdo em um cabeçalho com o título do site, seguido por uma divisão
-                        principal (.container) que apresenta o propósito do site e a coleção de livros em uma seção
-                        flexível (.livros). Cada livro é destacado em seu próprio contêiner (.livro), mostrando uma
-                        imagem da capa, detalhes do livro e um link de compra. O design responsivo é garantido pelo
-                        uso de uma meta tag viewport e um layout flexível que se adapta a diferentes tamanhos de
-                        tela.</p>
-                    <p>Os scripts JavaScript incluem módulos para gerar nomes aleatórios, definir as perguntas e as
-                        lógicas de jogo, como iniciar o jogo, apresentar perguntas e alternativas, processar as escolhas
-                        dos jogadores, e exibir o resultado final. Este design modular facilita a manutenção e a
-                        expansão futura do jogo. A importância das ferramentas utilizadas (HTML, CSS, JavaScript) reside
-                        na criação de uma experiência interativa que não apenas entretém, mas também educa os jogadores
-                        sobre a complexidade ética e social da IA, incentivando a reflexão crítica sobre o papel da
-                        tecnologia em nossas vidas.
+                    <p> How to Get Away with Murder (HTGAWM)
+Essa série acompanha a professora e advogada criminalista Annalise Keating e seus alunos em meio a crimes, investigações e dilemas morais. Ao contrário de Suits, que foca no Direito Corporativo, HTGAWM é centrada no Direito Penal e mostra julgamentos, processos criminais, técnicas de defesa e investigações complexas. A série é envolvente e recheada de reviravoltas.</p>
+                    <p>The Good Wife
+Mostra a transformação de Alicia Florrick, esposa de um político envolvido em escândalos, que retoma sua carreira de advogada após anos afastada. A série combina drama pessoal com casos jurídicos relevantes e atuais, envolvendo direitos civis, tecnologia, política e liberdade de expressão..</p>
+                    <p>The Lincoln Lawyer (O Advogado do Lincoln)
+Baseada nos livros de Michael Connelly, segue a vida de Mickey Haller, um advogado que atende seus clientes diretamente do banco de trás de um carro Lincoln. Ele atua principalmente na área criminal e enfrenta dilemas entre o que é legal e o que é moral
                     </p>
                     <img src="img/projeto-2.png" class="img-fluid w-100"
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
-                    <a href="https://femascheti.github.io/tecnicas-computacionais-refletindo-sobre-ia/">Ver projeto ao
+                    <a href="https://github.com/Duda20000/portfolio/edit/main/index.html">Ver projeto ao
                         vivo</a>
-                    <a href="https://github.com/femascheti/tecnicas-computacionais-refletindo-sobre-ia">Ver código do
+                    <a href="https://github.com/Duda20000/portfolio/edit/main/index.html">Ver código do
                         projeto</a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Modal 3 -->
-    <div class="modal" id="modal3" tabindex="-1">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <p>O projeto é uma aplicação educativa interativa focada em ensinar conceitos básicos de
-                        astronomia. Utiliza uma série de scripts associados a diferentes atores (sprites) e
-                        cenários para criar uma experiência de aprendizado envolvente. O objetivo é familiarizar
-                        os usuários com tópicos como as fases da Lua, eclipses, a visibilidade de diferentes
-                        constelações dependendo da localização geográfica na Terra, e a forma da Terra, através
-                        de interações e visualizações dinâmicas.</p>
-                    <p>Cada ator no projeto possui scripts que definem seu comportamento em resposta a eventos
-                        específicos, como o início do programa (quando a bandeira é clicada), cliques do
-                        usuário, ou mensagens recebidas. Estes eventos desencadeiam ações como mudanças de
-                        cenário, movimentos de atores, exibição ou ocultação de atores, e a apresentação de
-                        diálogos informativos. Por exemplo, ao clicar em determinados atores, os usuários podem
-                        "receber" uma prova, o que leva a uma mudança de cenário e a exibição de informações
-                        relevantes ou a visualização de uma constelação específica.</p>
-                    <p>A importância das ferramentas utilizadas, como os blocos de código visual do Scratch,
-                        reside na sua acessibilidade e na capacidade de engajar aprendizes de diferentes idades
-                        no pensamento computacional e na exploração de conceitos científicos de forma
-                        interativa. O uso de cenários, movimentos, e diálogos dinâmicos ajuda a criar uma
-                        experiência de aprendizado mais rica e memorável, encorajando os usuários a explorar e
-                        interagir com o conteúdo de maneira ativa, em vez de passivamente.</p>
-                    <img src="img/projeto-3.png" alt="Projeto 3" class="img-fluid w-100">
-                </div>
-                <div class="modal-footer">
-                    <a href="https://scratch.mit.edu/projects/951732825/">Ver projeto ao vivo</a>
                 </div>
             </div>
         </div>
@@ -224,3 +171,4 @@ No caso do Direito, as feiras geralmente incluem palestras com juízes, promotor
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>More actions
 </body
+</html>
